@@ -19,6 +19,7 @@ S3method(print,sj_xtab_stat)
 S3method(print,sjstats_outliers)
 S3method(print,sjstats_r2)
 S3method(print,sjstats_zcf)
+S3method(print,svyglm.nb)
 export(autocorrelation)
 export(boot_ci)
 export(boot_p)
