@@ -16,7 +16,8 @@ a specification of the survey design.}
 \item{...}{Other arguments passed down to \code{\link[MASS]{glm.nb}}.}
 }
 \value{
-A \code{\link[survey]{svymle}}-object.
+An object of class \code{\link[survey]{svymle}} and \code{svyglm.nb},
+          with some additional information about the model.
 }
 \description{
 \code{svyglm.nb()} is an extension to the \CRANpkg{survey}-package
@@ -29,6 +30,16 @@ A \code{\link[survey]{svymle}}-object.
 \details{
 For details on the computation method, see Lumley (2010), Appendix E
          (especially 254ff.)
+         \cr \cr
+         \pkg{sjstats} implements following S3-methods for \code{svyglm.nb}-objects:
+         \code{family()}, \code{model.frame()}, \code{formula()}, \code{print()}
+         and \code{predict()}. However, these functions have some limitations:
+         \code{family()} simply returns the family-object from the underlying
+         \code{\link[MASS]{glm.nb}}-model. The \code{predict()}-methods simply
+         re-computes the model with \code{\link[MASS]{glm.nb}}, overwrites
+         the \code{$coefficients} from this model-object with the coefficients
+         from the returned \code{\link[survey]{svymle}}-object and finally calls
+         \code{\link[stats]{predict.glm}} to compute the predicted values.
 }
 \examples{
 # ------------------------------------------
@@ -40,9 +51,9 @@ data(nhanes_sample)
 
 # create survey design
 des <- svydesign(
-  id = ~ SDMVPSU,
-  strat = ~ SDMVSTRA,
-  weights = ~ WTINT2YR,
+  id = ~SDMVPSU,
+  strat = ~SDMVSTRA,
+  weights = ~WTINT2YR,
   nest = TRUE,
   data = nhanes_sample
 )
@@ -51,7 +62,7 @@ des <- svydesign(
 fit <- svyglm.nb(total ~ factor(RIAGENDR) * (log(age) + factor(RIDRETH1)), des)
 
 # print coefficients and standard errors
-round(cbind(coef(fit), survey::SE(fit)), 2)
+fit
 
 }
 \references{
